Use ErrorOr package for error handling

--- a/BuberDinner.Domain/BuberDinner.Domain.csproj
+++ b/BuberDinner.Domain/BuberDinner.Domain.csproj
@@ -6,5 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.2.1" />
+  </ItemGroup>
+
+
 
 </Project>
