--- a/BuberDinner.Domain/BuberDinner.Domain.csproj
+++ b/BuberDinner.Domain/BuberDinner.Domain.csproj
@@ -10,7 +10,8 @@
     <PackageReference Include="ErrorOr" Version="1.2.1" />
   </ItemGroup>
 
-
-
-
+  <ItemGroup>
+    <Folder Include="User\Entities\" />
+  </ItemGroup>
+  
 </Project>
