--- a/BuberDinner.Domain/BuberDinner.Domain.csproj
+++ b/BuberDinner.Domain/BuberDinner.Domain.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Bill\Entities\" />
+    <Folder Include="Bill\ValueObjects\" />
     <Folder Include="User\Entities\" />
   </ItemGroup>
   
