--- a/BuberDinner.Api/BuberDinner.Api.csproj
+++ b/BuberDinner.Api/BuberDinner.Api.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Mapster" Version="7.4.0-pre06" />
     <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1-pre02" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
